--- a/strings.conf
+++ b/strings.conf
@@ -1,4 +1,4 @@
-#The first line is used for comment
+﻿#The first line is used for comment
 #line doesn't start with '!' is also neglected
 #called by DataManager::GetSysString(), DataManager::GetDesc()
 #system
@@ -36,7 +36,7 @@
 !system 64 再度召喚の効果を得ています。
 !system 65 効果を使用しています。
 !system 66 公開し続けています。
-!system 67 もともと相手が所有
+!system 67 元々の持ち主は相手です。
 !system 70 モンスターカード
 !system 71 魔法カード
 !system 72 罠カード
@@ -53,11 +53,13 @@
 !system 98 相手のモンスターをリリースしますか？
 !system 100 先攻
 !system 101 後攻
+!system 102 自分の
+!system 103 相手の
 !system 200 [%ls]の[%ls]の効果を発動しますか？
 !system 201 このタイミングでは効果を発動できません。
 !system 202 フィールドを確認しますか？
 !system 203 カードを発動しますか？
-!system 204 カウンターを%d個取り除いてください[%ls]
+!system 204 %d個の[%ls]を取り除いてください
 !system 205 カードの並び順を指定してください
 !system 206 チェーンを組む順番を指定してください
 !system 207 デッキの上からカードを%d枚めくります：
@@ -78,6 +80,7 @@
 !system 222 誘発した効果を使用しますか？
 !system 223 スペルスピード２以上の効果は後で確認します。
 !system 224 正規の方法で特殊召喚されています
+!system 225 [%ls](%d)の下に重なっています
 !system 500 リリースするカードを選んでください
 !system 501 捨てる手札を選んでください
 !system 502 破壊するカードを選んでください
@@ -89,9 +92,9 @@
 !system 508 召喚するカードを選んでください
 !system 509 特殊召喚するカードを選んでください
 !system 510 セットするカードを選んでください
-!system 511 融合召喚の素材を選んでください
-!system 512 シンクロ召喚の素材を選んでください
-!system 513 エクシーズ召喚の素材を選んでください
+!system 511 融合素材とするカードを選んでください
+!system 512 シンクロ素材とするカードを選んでください
+!system 513 エクシーズ素材とするカードを選んでください
 !system 514 表側表示のカードを選んでください
 !system 515 裏側表示のカードを選んでください
 !system 516 攻撃表示のモンスターを選んでください
@@ -109,10 +112,10 @@
 !system 528 表示形式を変更するモンスターを選んでください
 !system 529 自分のカードを選んでください
 !system 530 相手のカードを選んでください
-!system 531 アドバンス召喚のためにリリースするモンスターを選んでください：
+!system 531 アドバンス召喚のためにリリースするモンスターを選んでください
 !system 532 取り除くエクシーズ素材を選んでください
-!system 533 リンク召喚の素材を選んでください
-!system 534 フィールドに残るカードを選択してください
+!system 533 リンク素材とするカードを選んでください
+!system 534 フィールドに残すカードを選んでください
 !system 549 攻撃の対象を選んでください
 !system 550 発動する効果を選んでください
 !system 551 効果の対象を選んでください
@@ -133,7 +136,9 @@
 !system 569 「%ls」の使用する場所を選択してください
 !system 570 使用不可にする場所を選択してください
 !system 571 移動する場所を選択してください
-!system 572 カウンターを乗せる場所を選択してください
+!system 572 カウンターを置くカードを選んでください
+!system 573 効果を無効にするカードを選んでください
+!system 574 処理を行うカードを選んでください
 !system 1000 デッキ
 !system 1001 手札
 !system 1002 モンスターゾーン
@@ -203,24 +208,24 @@
 !system 1074 ペンデュラム
 !system 1075 特殊召喚
 !system 1076 リンク
-!system 1077 無効果
 !system 1080 ―
+!system 1081 ＥＸモンスターゾーン
 #GUI
-!system 1100 魔罠破壊
-!system 1101 ﾓﾝｽﾀ破壊
+!system 1100 魔法罠カード破壊
+!system 1101 モンスター破壊
 !system 1102 除外
-!system 1103 墓地送り
-!system 1104 手札戻し
-!system 1105 ﾃﾞｯｷ戻し
+!system 1103 墓地へ送る
+!system 1104 手札に戻す
+!system 1105 デッキに戻す
 !system 1106 手札破壊
-!system 1107 ﾃﾞｯｷ破壊
+!system 1107 デッキ破壊
 !system 1108 ドロー
 !system 1109 サーチ
 !system 1110 墓地回収
 !system 1111 表示形式
-!system 1112 ｺﾝﾄﾛｰﾙ
-!system 1113 攻/守
-!system 1114 戦ﾀﾞﾒｰｼﾞ
+!system 1112 コントロール
+!system 1113 攻撃力守備力
+!system 1114 戦闘ダメージ
 !system 1115 連続攻撃
 !system 1116 攻撃制限
 !system 1117 直接攻撃
@@ -228,15 +233,15 @@
 !system 1119 トークン
 !system 1120 種族関連
 !system 1121 属性関連
-!system 1122 LP損害
-!system 1123 LP回復
-!system 1124 破壊関連
+!system 1122 ライフダメージ
+!system 1123 ライフ回復
+!system 1124 破壊耐性
 !system 1125 効果耐性
-!system 1126 ｶｳﾝﾀｰ
-!system 1127 ｷﾞｬﾝﾌﾞﾙ
+!system 1126 カウンター
+!system 1127 ギャンブル
 !system 1128 融合関連
-!system 1129 ｼﾝｸﾛ関連
-!system 1130 XYZ関連
+!system 1129 シンクロ関連
+!system 1130 エクシーズ関連
 !system 1131 効果無効
 #actions
 !system 1150 発動
@@ -257,7 +262,7 @@
 !system 1165 エクシーズ召喚
 !system 1166 リンク召喚
 !system 1190 手札に加える
-!system 1191 墓地に送る
+!system 1191 墓地へ送る
 !system 1192 除外する
 #menu
 !system 1200 ネット対戦
@@ -293,6 +298,8 @@
 !system 1235 パスワード：
 !system 1236 ルール選択：
 !system 1237 ターンの制限時間：
+!system 1238 ＯＮＬＩＮＥ
+!system 1239 ＬＡＮ
 !system 1240 ＯＣＧ
 !system 1241 ＴＣＧ
 !system 1242 ＯＣＧ＆ＴＣＧ
@@ -302,16 +309,19 @@
 !system 1246 タッグ
 !system 1247 デフォルト
 !system 1248 カスタム
+!system 1249 サーバーリスト
 !system 1250 決闘準備
 !system 1251 →決闘する
 !system 1252 →観戦する
 !system 1253 観戦人数：
 !system 1254 デッキ選択：
 !system 1255 準備完了！
-!system 1260 マスター・ルール１
-!system 1261 マスター・ルール２
-!system 1262 マスター・ルール３
-!system 1263 新マスター・ルール
+!system 1260 マスタールール
+!system 1261 マスタールール２
+!system 1262 マスタールール３
+!system 1263 新マスタールール
+!system 1264 マスタールール(11期)
+!system 1269 サーバー毎のデフォルトルール
 !system 1270 カード情報
 !system 1271 デュエルログ
 !system 1272 ログを削除
@@ -321,14 +331,15 @@
 !system 1276 チェーンを組む順番の指定を自動で行う
 !system 1277 チェーンできない時も思考中に見せかける
 !system 1278 魔法・罠の配置を自動で行う
-!system 1279 SE
+!system 1279 サウンド
 !system 1280 BGM
-!system 1281 BGMを自動的に切り替える
-!system 1282 ウィンドウサイズ
-!system 1283 小
-!system 1284 中
-!system 1285 大
-!system 1286 特大
+!system 1281 シーンチェンジでBGM切替
+!system 1282 サイズ
+!system 1283 S
+!system 1284 M
+!system 1285 L
+!system 1286 XL
+!system 1287 チェーン１でもチェーンを表示する
 !system 1290 相手のチャットの発言を表示しない
 !system 1291 観戦者のチャットの発言を表示しない
 !system 1292 確認なし
@@ -338,7 +349,7 @@
 !system 1296 選択完了
 !system 1297 シャッフル
 !system 1298 動作設定
-!system 1299 高速アニメーション
+!system 1299 アニメーションの高速化
 !system 1300 禁止制限：
 !system 1301 デッキ：
 !system 1302 保存
@@ -366,14 +377,15 @@
 !system 1325 テキスト：
 !system 1326 効果
 !system 1327 検索
+!system 1328 スケール赤：
 !system 1329 カテゴリ：
-!system 1330 メイン
-!system 1331 ＥＸ
-!system 1332 サイド
-!system 1333 検索結果
+!system 1330 メイン：
+!system 1331 ＥＸ：
+!system 1332 サイド：
+!system 1333 検索結果：
 !system 1334 サイドチェンジ終了
 !system 1335 保存成功
-!system 1336 スケール：
+!system 1336 スケール青：
 !system 1337 デッキを削除しますか？
 !system 1338 削除しました
 !system 1339 デッキをクリアしますか？
@@ -391,29 +403,33 @@
 !system 1351 サレンダー
 !system 1352 情報：
 !system 1353 再生開始ターン：
+!system 1354 カテゴリを表示しない
+!system 1355 発動確認ボタンを表示しない
 !system 1356 編集中の内容を破棄しますか？
 !system 1357 デッキの編集内容の保存を確認しない
 !system 1358 入力されたテキストを自動検索
-!system 1359 降伏してもよろしいですか？
+!system 1359 サレンダーしますか？
 !system 1360 一手戻す
 !system 1361 リプレイ削除
-!system 1362 リネーム
-!system 1363 削除してもよろしいですか？
-!system 1364 リプレイ改名
-!system 1365 名前の変更に失敗しました。おそらく同じ名前の再生があります。
-!system 1366 リプレイ自動保存
-!system 1367 リプレイは次の名前で保存されました %ls.yrp
+!system 1362 名前変更
+!system 1363 リプレイを削除しますか？
+!system 1364 リプレイの名前を変更する
+!system 1365 名前の変更に失敗しました、同じ名前のファイルが存在する可能性があります
+!system 1366 リプレイを自動保存する
+!system 1367 リプレイ自動保存 %ls.yrp
 !system 1370 レベル↑
 !system 1371 攻撃力↑
 !system 1372 守備力↑
 !system 1373 カード名↓
 !system 1374 リンクマーカー
-!system 1378 複数キーワード検索
-!system 1379 拡張デバッグモード
+!system 1375 名前の変更に成功しました
+!system 1376 デッキの名前を変更する
+!system 1377 デッキ名：
+!system 1378 複数のキーワードで検索する
+!system 1379 expansionのscriptを優先する
 !system 1380 AI対戦
 !system 1381 詰めデュエル
 !system 1382 AI情報：
-!system 1383 マスタールール３
 !system 1384 チョキで固定
 !system 1385 リストは空です、ファイルが足りていない可能性があります
 !system 1390 思考中です...
@@ -432,25 +448,29 @@
 !system 1410 デッキの枚数が変わっています。
 !system 1411 相手とバージョンが一致していません(%X.0%X.%X)。
 !system 1412 ホストアドレスを解決できません。
-!system 1413 [%ls] はOCGのみで、現在の部屋では許可されていません。
-!system 1414 [%ls] はTCGのみで、現在の部屋では許可されていません。
-!system 1415 [%ls(%d)] はホストによって識別できません。
-!system 1416 あなたのデッキには３枚以上 [%ls]があります。
-!system 1417 メインデッキには最低40枚のカード～最大60枚のカードが必要です。 あなたは %d 枚です。
-!system 1418 エクストラデッキには最大15枚までです。あなたは %d 枚です。
-!system 1419 サイドデッキには最大15枚までです。 あなたは %d 枚です。
-!system 1420 メインデッキのカードの中にはエクストラデッキに入っているべきものがあります。 メインデッキとエクストラデッキが正しく作られているか確認してください。
-!system 1421 無効な操作です。再試行してください。
-!system 1422 宣言されたカードは違法であるか、ホストに認識されていません。
-!system 1423 不適格な属性です。
-!system 1424 対象外の種族です。
-!system 1425 対象外の番号です。
-!system 1426 不適切な選択です。
-!system 1427 対象外カードです。
-!system 1428 対象外なチェーンです。
-!system 1429 不適格な場所です。
-!system 1430 不適格なポジション。
-!system 1431 対象外なカウンターです。
+!system 1413 「%ls」はOCGのみのカードです、現在のカードプールでは使用できません。
+!system 1414 「%ls」はTCGのみのカードです、現在のカードプールでは使用できません。
+!system 1415 「%ls(%d)」はホストが認識できないカードです。
+!system 1416 「%ls」の合計が３枚を超えています。
+!system 1417 デッキの枚数は40-60枚でなければなりませんが、現在は%d枚になっています。
+!system 1418 ＥＸデッキの枚数は１５枚までですが、現在は%d枚になっています。
+!system 1419 サイドデッキの枚数は１５枚までですが、現在は%d枚になっています。
+!system 1420 メインデッキにＥＸデッキの枚数を超えるカードが含まれています。
+!system 1421 無効な操作です、もう１度やり直してください。
+!system 1422 宣言したカードは条件を満たしていないか、ホストが認識できません。
+!system 1423 宣言した属性は条件を満たしていません。
+!system 1424 宣言した種族は条件を満たしていません。
+!system 1425 宣言した数は条件を満たしていません。
+!system 1426 選択したオプションは条件を満たしていません。
+!system 1427 選択したカードは条件を満たしていません。
+!system 1428 選択したチェーンは条件を満たしていません。
+!system 1429 選択した場所は条件を満たしていません。
+!system 1430 選択した表示形式は条件を満たしていません。
+!system 1431 選択したカウンターは条件を満たしていません。
+!system 1440 画像を閉じる
+!system 1441 拡大
+!system 1442 縮小
+!system 1443 原寸大
 !system 1500 デュエルを終了します。
 !system 1501 再生を終了します。
 !system 1502 相手との接続を終了しました。
@@ -474,8 +494,8 @@
 !system 1614 相手は%dポイントのダメージを受けます。
 !system 1615 自分のLPが%dポイント回復します。
 !system 1616 相手のLPが%dポイント回復します。
-!system 1617 [%ls]にカウンターを%d個乗せます。[%ls]
-!system 1618 [%ls]のカウンターを%d個取り除きます。[%ls]
+!system 1617 [%ls]に%d個の[%ls]を乗せます。
+!system 1618 [%ls]から%d個の[%ls]を取り除きます。
 !system 1619 [%ls]が[%ls]に攻撃しました。
 !system 1620 [%ls]による直接攻撃が宣言されました。
 !system 1621 攻撃が無効にされました。
@@ -484,12 +504,58 @@
 !system 1624 サイコロの結果：
 #tips
 !system 1700 マウスの右クリックでも%lsできます。
+#menu custom
+!system 1900 YGOPROを起動しました。
+!system 1901 名前をコピーしました。
+!system 1902 カードIDをコピーしました。
+!system 1903 カードWikiを開きました。
+!system 1904 公式データベースを開きました。
+!system 1905 スクリーンショットを保存しました。
+!system 1906 入室に成功しました。
+!system 1907 エラーが発生しました。
+!system 1908 %lsのターンです。
+!system 1909 デュエルを開始します。
+!system 1910 リンクを開けませんでした。
+!system 1911 カード名をクリップボードにコピーしました。
+!system 1912 カードIDをクリップボードにコピーしました。
+!system 1913 scriptを開きました。
+!system 1914 scriptを全て開きました。
+!system 1915 scriptの取得に失敗しました。
+!system 1920 パック
+!system 1921 検索設定
+!system 1922 DB
+!system 1923 wiki
+!system 1924 名前
+!system 1925 ID
+!system 1926 script
+!system 1927 参考価格
+!system 1930 レベル↓
+!system 1931 攻撃力↓
+!system 1932 守備力↓
+!system 1933 スケール↑
+!system 1934 スケール↓
+!system 1935 カード名↑
+!system 1936 カードID↑
+!system 1937 カードID↓
+!system 1950 プレイヤーネーム非表示
+!system 1960 INFOカラーを明るくする
+!system 1961 ↑スキンの設定が優先されます
+!system 1962 棒読みちゃんの読み上げを有効化
+!system 1964 カードIDを表示しない
+!system 1965 トークンを表示しない
+!system 1966 非公式カードを表示しない
+!system 1967 範囲検索の無効化
+!system 1968 IDコピーの桁を補完する
+!system 1969 該当IDのscriptを全て開く
+!system 1980 分類
+!system 1981 一覧
+
 #victory reason
-!victory 0x0 サレンダーしました。
-!victory 0x1 LPが0になりました。
-!victory 0x2 カードをドローできませんでした。
-!victory 0x3 時間切れになりました。
-!victory 0x4 接続が切れました。
+!victory 0x0 がサレンダーしました。
+!victory 0x1 のLPが0になりました。
+!victory 0x2 はカードをドローできませんでした。
+!victory 0x3 が時間切れになりました。
+!victory 0x4 の接続が切れました。
 !victory 0x10 「封印されしエクゾディア」の効果で勝利
 !victory 0x11 「終焉のカウントダウン」の効果で勝利
 !victory 0x12 「毒蛇神ヴェノミナーガ」の効果で勝利
@@ -503,19 +569,11 @@
 !victory 0x1a 「魂のリレー」の効果で勝利
 !victory 0x1b 「ゴーストリックの駄天使」の効果で勝利
 !victory 0x1c 「幻煌龍の天渦」の効果で勝利
-!victory 0x1d 「F.A. Winners」の効果で勝利
+!victory 0x1d 「Ｆ.Ａ.ウィナーズ」の効果で勝利
 !victory 0x1e 「飛行エレファント」の効果で勝利
 !victory 0x1f 「守護神エクゾディア」の効果で勝利
-!victory 0x20 「%ls」の効果でマッチに勝利
-!victory 0x21 「真エクゾディア」の効果で勝利
-!victory 0x30 「奇跡の創造者」の効果で勝利
-!victory 0x51 「イービル １」の効果で勝利
-!victory 0x52 「ＣｉＮｏ．１０００ 夢幻虚光神ヌメロニアス・ヌメロニア」の効果で勝利
-!victory 0x53 「煉獄の零門」の効果で勝利
-!victory 0x54 「デュース」の効果で勝利
-!victory 0x55 「アクションフィールド」の効果で勝利
-!victory 0x56 「Deck Master」の効果で勝利
-!victory 0x57 「運命のドロー」の効果で勝利
+!victory 0x20 「真エクゾディア」の効果で勝利
+!victory 0xffff 「%ls」の効果でマッチに勝利
 #counters
 !counter 0x1 魔力カウンター
 !counter 0x1002 楔カウンター
@@ -542,7 +600,6 @@
 !counter 0x17 ドングリカウンター
 !counter 0x18 フラワーカウンター
 !counter 0x1019 フォッグカウンター
-!counter 0x20 プラントカウンター
 !counter 0x1a 倍々カウンター
 !counter 0x1b 時計カウンター
 !counter 0x1c Ｄカウンター
@@ -569,7 +626,7 @@
 !counter 0x31 ホープ剣カウンター
 !counter 0x32 バルーンカウンター
 !counter 0x33 妖仙カウンター
-!counter 0x34 カウンター（BOX）
+!counter 0x34 カウンター（BOXサー）
 !counter 0x35 音響カウンター
 !counter 0x36 Ｅｍカウンター
 !counter 0x37 壊獣カウンター
@@ -589,22 +646,23 @@
 !counter 0x4b ヴァレルカウンター
 !counter 0x4c サモンカウンター
 !counter 0x104d シグナルカウンター
-!counter 0x4e カウンター(魂のペンデュラム)
-!counter 0x104f ヴェネミーカウンター
-!counter 0x14a カウンター (ＥＭターントルーパー)
-!counter 0x14b カウンター (Ｂ・Ｆ・Ｎ)
-!counter 0x14c カウンター (ファイアウォール・ドラゴン・ダークフルード)
-!counter 0x14d カウンター (熾天蝶)
-!counter 0x14e カウンター (ご隠居の大釜)
-!counter 0x14f カウンター (星遺物の導く先)
-!counter 0x200 カウンター (魂のペンデュラム)
-!counter 0x201 Fire Fist カウンター
-#archetype
+!counter 0x4e カウンター（魂のペンデュラム）
+!counter 0x4f ヴェネミーカウンター
+!counter 0x50 カウンター（EMターントルーパー）
+!counter 0x51 カウンター（Ｂ・Ｆ・Ｎ）
+!counter 0x52 カウンター（ファイアウォール・ドラゴン・ダークフルード）
+!counter 0x53 カウンター（熾天蝶）
+!counter 0x54 カウンター（星遺物の導く先）
+!counter 0x55 カウンター（ご隠居の大釜）
+!counter 0x56 炎星カウンター
+!counter 0x57 幻魔カウンター
+!counter 0x58 カウンター（禰須三破鳴比）
+#setnames, using tab for comment
 !setname 0x1 A・O・J
 !setname 0x2 ジェネクス
 !setname 0x1002 レアル・ジェネクス
-!setname 0x2002 A・ジェネクス
-!setname 0x3 ホルスの黒炎竜
+#setname 0x2002 A・ジェネクス
+#setname 0x3 ―
 !setname 0x4 アマゾネス
 !setname 0x5 アルカナフォース
 !setname 0x6 暗黒界
@@ -622,7 +680,7 @@
 !setname 0xc エーリアン
 !setname 0xd セイバー
 !setname 0x100d X－セイバー
-!setname 0x300d XX－セイバー
+#setname 0x300d XX－セイバー
 !setname 0x400d エレメントセイバー
 !setname 0xe エレキ
 !setname 0xf おジャマ
@@ -631,12 +689,14 @@
 !setname 0x12 ガエル
 !setname 0x13 機皇
 !setname 0x3013 機皇帝
+!setname 0x5013 機皇神
 !setname 0x6013 機皇兵
+#setname 0x14 ―
 !setname 0x15 巨大戦艦
 !setname 0x16 ロイド
 !setname 0x1016 ビークロイド
-!setname 0x2016 SR
-!setname 0x17 シンクロ
+!setname 0x2016 スピードロイド
+#!setname 0x17 シンクロ
 !setname 0x1017 シンクロン
 !setname 0x2017 シンクロ・ドラゴン
 !setname 0x18 雲魔物
@@ -644,6 +704,7 @@
 !setname 0x1a 黒蠍
 !setname 0x1b 幻獣
 !setname 0x101b 幻獣機
+#setname 0x1c ―
 !setname 0x1d コアキメイル
 !setname 0x1e C（コクーン）
 !setname 0x1f Ｎ（ネオスペーシアン）
@@ -659,8 +720,8 @@
 !setname 0x29 ドラグニティ
 !setname 0x2a ナチュル
 !setname 0x2b 忍者
-!setname 0x102b 機甲忍者
 !setname 0x2c フレムベル
+#setname 0x2d ―
 !setname 0x2e 墓守
 !setname 0x2f 氷結界
 !setname 0x30 ヴァイロン
@@ -672,9 +733,8 @@
 !setname 0x1034 宝玉獣
 !setname 0x2034 究極宝玉神
 !setname 0x35 魔轟神
-!setname 0x1035 魔轟神獣
 !setname 0x36 マシンナーズ
-!setname 0x37 霞の谷
+!setname 0x37 ミスト・バレー
 !setname 0x38 ライトロード
 !setname 0x39 ラヴァル
 !setname 0x3a リチュア
@@ -701,16 +761,16 @@
 !setname 0x1047 ジェムナイト
 !setname 0x48 No.
 !setname 0x1048 CNo.
-!setname 0x5048 CNo.39
 !setname 0x49 銃士
 !setname 0x4a 時械神
 !setname 0x4b 極神
 !setname 0x4c 落とし穴
-!setname 0x4e Evol
+#setname 0x4d ―
+#setname 0x4e エヴォル
 !setname 0x304e エヴォルド
 !setname 0x604e エヴォルダー
 !setname 0x504e エヴォルカイザー
-!setname 0x4f バスター
+#setname 0x4f バスター
 !setname 0x104f ／バスター
 !setname 0x50 ヴェノム
 !setname 0x1050 スターヴ・ヴェノム
@@ -726,6 +786,9 @@
 !setname 0x5a ペンギン
 !setname 0x5b トマボー
 !setname 0x5c スフィンクス
+#setname 0x5d ―
+#setname 0x5e ―
+#setname 0x5f ―
 !setname 0x60 竹光
 !setname 0x61 忍法
 !setname 0x62 トゥーン
@@ -740,14 +803,13 @@
 !setname 0x69 聖刻
 !setname 0x6a 幻蝶の刺客
 !setname 0x6b バウンサー
-!setname 0x6c ライトレイ
+#setname 0x6c ライトレイ
 !setname 0x6d 魔人
-#setname 0x106d 儀式魔人
 !setname 0x6e 魔導
 !setname 0x106e 魔導書
 !setname 0x6f ヒロイック
 !setname 0x106f H・C
-!setname 0x206f H－C
+#setname 0x206f H－C
 !setname 0x70 先史遺産
 !setname 0x71 マドルチェ
 !setname 0x72 ギアギア
@@ -761,7 +823,7 @@
 !setname 0x77 海皇
 !setname 0x78 素早い
 !setname 0x79 炎星
-!setname 0x7a 聖
+#setname 0x7a 聖
 !setname 0x107a 聖騎士
 !setname 0x207a 聖剣
 !setname 0x7b ギャラクシー
@@ -770,9 +832,12 @@
 !setname 0x7c 炎舞
 !setname 0x7d ヘイズ
 !setname 0x107d 陽炎獣
-!setname 0x7e ZW
+!setname 0x7e ゼアル
+!setname 0x107e ＺＷ
+!setname 0x207e ＺＳ
 !setname 0x7f ホープ
 !setname 0x107f 希望皇ホープ
+!setname 0x207f 未来皇ホープ
 !setname 0x80 ダストン
 !setname 0x81 炎王
 !setname 0x1081 炎王獣
@@ -787,6 +852,7 @@
 #setname 0x8a 蟲惑
 !setname 0x108a 蟲惑魔
 !setname 0x8b マリスボラス
+#setname 0x8c ドルイド
 !setname 0x8d ゴーストリック
 !setname 0x8e ヴァンパイア
 !setname 0x8f ズババ
@@ -814,6 +880,7 @@
 !setname 0x9f EM
 !setname 0xa0 伝説の騎士
 !setname 0xa1 伝説の竜
+#setname 0xa2 マジシャン
 !setname 0x10a2 ブラック・マジシャン
 !setname 0x20a2 マジシャン・ガール
 !setname 0x30a2 ブラック・マジシャン・ガール
@@ -841,6 +908,7 @@
 !setname 0xb5 霊獣
 !setname 0x10b5 霊獣使い
 !setname 0x20b5 精霊獣
+#!setname 0x30b5 精霊獣使い
 !setname 0x40b5 聖霊獣騎
 !setname 0xb6 外神
 !setname 0xb7 旧神
@@ -852,7 +920,8 @@
 !setname 0xbd 暗黒騎士ガイア
 !setname 0xbe 帝王
 !setname 0xbf 霊使い
-!setname 0xc0 憑依装着
+!setname 0xc0 憑依
+!setname 0x10c0 憑依装着
 !setname 0xc1 PSYフレーム
 !setname 0x10c1 PSYフレームギア
 !setname 0xc2 パワー・ツール
@@ -902,7 +971,7 @@
 !setname 0xe9 磁石の戦士
 !setname 0xea クリストロン
 !setname 0xeb 化合獣
-!setname 0xec 魔界
+#!setname 0xec 魔界
 !setname 0x10ec 魔界劇団
 !setname 0x20ec 魔界台本
 !setname 0xed サブテラー
@@ -922,13 +991,13 @@
 !setname 0xf5 ガンドラ
 !setname 0xf6 摩天楼
 !setname 0xf7 LL
-#setname 0xf8 覇王
+#!setname 0xf8 覇王
 !setname 0x10f8 覇王門
 !setname 0x20f8 覇王眷竜
 !setname 0xf9 真竜
 !setname 0xfa 幻煌龍
-!setname 0xfc 剛鬼
 !setname 0xfb トリックスター
+!setname 0xfc 剛鬼
 !setname 0xfd 星杯
 !setname 0xfe 星遺物
 !setname 0xff クリアウィング
@@ -948,7 +1017,8 @@
 !setname 0x10d 魔導獣
 !setname 0x10e 進化薬
 !setname 0x10f ヴァレル
-!setname 0x110 アイズ・サクリファイス
+!setname 0x110 サクリファイス
+!setname 0x1110 アイズ・サクリファイス
 !setname 0x111 アームド・ドラゴン
 !setname 0x112 トロイメア
 !setname 0x113 霊神
@@ -968,7 +1038,8 @@
 !setname 0x120 プランキッズ
 !setname 0x121 魔妖
 !setname 0x122 ワルキューレ
-!setname 0x123 ローズ・ドラゴン
+!setname 0x123 ローズ
+!setname 0x1123 ローズ・ドラゴン
 !setname 0x124 機械天使
 !setname 0x125 スマイル
 !setname 0x126 クロノダイバー
@@ -976,32 +1047,89 @@
 !setname 0x128 ウィッチクラフト
 !setname 0x129 呪眼
 !setname 0x12a エンディミオン
-!setname 0x12b 海晶乙女
+!setname 0x12b マリンセス
 !setname 0x12c 天威
 !setname 0x12d シムルグ
 !setname 0x12e 占い魔女
 !setname 0x12f B・F
 !setname 0x130 破械
 !setname 0x1130 破械神
-!setname 0x131 Dream Mirror
+!setname 0x131 夢魔鏡
 !setname 0x132 斬機
 !setname 0x133 ドラゴンメイド
 !setname 0x134 ジェネレイド
-!setname 0x135 ＠イグニスター
-!setname 0x136 Ａｉ
-!setname 0x139 オノマト
-!setname 0x236 戦華
-!setname 0x237 メガリス
-!setname 0xC093 サイバーダーク
-!setname 0x23b リベリオン
-!setname 0xC093 サイバーダーク
-!setname 0x23b リベリオン
+!setname 0x135 @イグニスター
+!setname 0x136 Ai
+!setname 0x137 戦華
+!setname 0x138 メガリス
 !setname 0x139 守護神官
 !setname 0x13a オノマト
+!setname 0x13b リベリオン
+!setname 0x13c コードブレイカー
+!setname 0x13d ネメシス
+!setname 0x13e バルバロス
+!setname 0x13f 海造賊
+!setname 0x140 アダマシア
+!setname 0x141 六花
+!setname 0x1142 エルドリッチ
+!setname 0x2142 エルドリクシル
+!setname 0x143 黄金郷
+!setname 0x144 幻魔
+!setname 0x145 ドラグマ
+!setname 0x146 メルフィー
+!setname 0x147 ポータン
+!setname 0x148 ローラン
+!setname 0x149 化石
+!setname 0x14a ヌメロン
+!setname 0x114a ゲート・オブ・ヌメロン
+!setname 0x14b 機塊
+!setname 0x314c 地霊術
+!setname 0x514c 水霊術
+!setname 0x614c 火霊術
+!setname 0x914c 風霊術
+!setname 0x14d トライブリゲード
+!setname 0x14e 電脳堺
+!setname 0x114e 電脳堺門
+!setname 0x14f 双天
+!setname 0x150 マギストス
+!setname 0x1151 ライブツイン
+!setname 0x2151 イビルツイン
+!setname 0x152 キスキル
+!setname 0x153 リィラ
+!setname 0x154 ドライトロン
+!setname 0x155 スプリガンズ
+!setname 0x156 Ｓ－Ｆｏｒｃｅ
+!setname 0x157 Myutant
 
-# オリジナルカテゴリー
-!setname 0x444 tSG
-!setname 0x600 Dark Tuner
-!setname 0x601 Dark Synchro
-!setname 0x316 Darkness
+#更新状態
+!system 2000  【開発からのお知らせ】
+!system 2001  コアファイルアップデート完了
+!system 2002  以上
+!system 2003  ‐‐
+!system 2004  ‐‐
 
+#仮実装のカテゴリやカウンター
+!counter 0x57 幻魔カウンター
+!counter 0x58 カウンター（禰須三破鳴比）
+
+#カテゴリ(仮)
+!setname 0xC093 サイバーダーク
+!setname 0x10e5 サイファー・ドラゴン
+!setname 0x7e ゼアル
+!setname 0x107e ＺＷ
+!setname 0x207e ＺＳ
+!setname 0x155 スプリガンズ
+!setname 0x156 Ｓ－Ｆｏｒｃｅ
+!setname 0x157 Myutant
+!setname 0x255 サンヴァイン
+!setname 0x256 サンアバロン
+!setname 0x25a ＲＤＭ
+!setname 0x25b ホーリーナイツ
+
+
+#カテゴリ(正規予定)
+
+#カウンター
+
+#特殊勝利
+!victory 0x21 「ＣｉＮｏ.１０００ 夢幻虚光神ヌメロニアス・ヌメロニア」の効果で勝利
